# path_to_regex

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-and-test.yml
example/: CMakeLists.txt
example/src/: main.cpp
include/: path_to_regex.hpp
tests/: CMakeLists.txt
tests/src/: main.cpp
